Fix #30770: missing node editor redraw when changing active material by clicking on face in edit mode.