source/blender/editors/mesh/editmesh_select.c
@@ -1499,12 +1499,13 @@ int mouse_mesh(bContext *C, const int mval[2], short extend)
 		
 		EDBM_selectmode_flush(vc.em);
 		  
-//		if (EM_texFaceCheck()) {
-
+		/* change active material on object */
 		if (efa && efa->mat_nr != vc.obedit->actcol - 1) {
 			vc.obedit->actcol = efa->mat_nr + 1;
 			vc.em->mat_nr = efa->mat_nr;
-//			BIF_preview_changed(ID_MA);
+
+			WM_event_add_notifier(C, NC_MATERIAL|ND_SHADING, NULL);
+
 		}
 
 		WM_event_add_notifier(C, NC_GEOM | ND_SELECT, vc.obedit);
